force-app/main/default/objects/Contact/fields/Drive_URL__c.field-meta.xml
<CustomField>
    <fullName>Drive_URL__c</fullName>
    <label>URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>