force-app/main/default/objects/Contact/fields/MasterDuplicate__c.field-meta.xml
<CustomField>
    <fullName>MasterDuplicate__c</fullName>
    <label>MasterDuplicate</label>
    <length>18</length>
    <type>Text</type>
</CustomField>