force-app/main/default/objects/Contact/fields/Previous_No_Shows__c.field-meta.xml
<CustomField>
    <fullName>Previous_No_Shows__c</fullName>
    <label>Previous No Shows</label>
    <summaryFilterItems>
        <field>Reservation__c.No_Show__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Reservation__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>