force-app/main/default/objects/Contact/fields/Rewards_Member__c.field-meta.xml
<CustomField>
    <fullName>Rewards_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rewards Member</label>
    <type>Checkbox</type>
</CustomField>