force-app/main/default/objects/Contact/fields/Rol__c.field-meta.xml
<CustomField>
    <fullName>Rol__c</fullName>
    <label>Rol</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Influyente</fullName>
            </value>
            <value>
                <fullName>Tomador de Decisión</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>