force-app/main/default/objects/Contact/fields/Total_Reservations__c.field-meta.xml
<CustomField>
    <fullName>Total_Reservations__c</fullName>
    <label>Total Reservations</label>
    <summaryForeignKey>Reservation__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>